--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "@wdio/cucumber-framework": "^8.39.0",
     "@wdio/local-runner": "^8.39.1",
     "@wdio/spec-reporter": "^8.39.0"
+  },
+  "dependencies": {
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.3"
   }
 }
